# boxen

./: CHANGELOG.md  Cargo.toml  GITHUB_SETUP.md  LICENSE-APACHE  LICENSE-MIT  README.md  RELEASE_NOTES_v0.4.0.md  deny.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml  security.yml
benches/: README.md  allocation_benchmarks.rs  criterion_benchmarks.rs  performance_benchmarks.rs
docs/: customization.md  performance.md  usage.md
examples/: basic_box.rs  caching_demo.rs  clock_spinner.rs  color_demo.rs  comprehensive_demo.rs  dynamic_sizing_demo.rs  error_handling_demo.rs  fullscreen_demo.rs  js_demo_port.rs  main_api_demo.rs  memory_profiling.rs  performance_demo.rs  string_pool_demo.rs  title_colors_demo.rs  usage_patterns_demo.rs
src/: boxen.rs  error.rs  error_tests.rs  lib.rs  options.rs  render.rs  validation.rs
src/borders/: chars.rs  mod.rs  styles.rs
src/color/: mod.rs
src/memory/: mod.rs  pool.rs
src/terminal/: dimensions.rs  mod.rs  size_cache.rs
src/text/: alignment.rs  measurement.rs  mod.rs  width_cache.rs  wrapping.rs
tests/: color_validation_tests.rs  integration_tests.rs  performance_tests.rs  pooled_string_raii_test.rs  spacing_api_tests.rs  testsprite_generated_tests.rs  thread_safety_tests.rs  title_color_tests.rs  typescript_compatibility_tests.rs
