[package]
name = "boxen"
version = "0.3.2"
edition = "2024"
rust-version = "1.85.0"
authors = ["Boxen Contributors"]
description = "A Rust library for creating styled terminal boxes around text with performance optimizations"
license = "MIT OR Apache-2.0"
repository = "https://github.com/sabry-awad97/boxen"
documentation = "https://docs.rs/boxen"
keywords = ["terminal", "cli", "box", "text", "formatting"]
categories = ["command-line-utilities", "text-processing"]
readme = "README.md"

[dependencies]
terminal_size = "0.4.4"
colored = "3.1.1"
unicode-width = "0.2.2"
textwrap = "0.16.2"
thiserror = "2.0.18"
lru = { version = "0.16.3", optional = true }
ahash = { version = "0.8.12", optional = true }
signal-hook = { version = "0.4.4", optional = true }
dhat = { version = "0.3.3", optional = true }

[dev-dependencies]
chrono = "0.4.44"
ctrlc = "3.5.2"
criterion = { version = "0.8.2", features = ["html_reports"] }

[features]
default = []
dhat-heap = ["dhat"]
width-cache = ["lru", "ahash"]
terminal-cache = ["signal-hook"]

[[bench]]
name = "allocation_benchmarks"
harness = false

[[bench]]
name = "criterion_benchmarks"
harness = false

[[bench]]
name = "performance_benchmarks"
harness = false

# Performance optimizations
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 1  # Some optimization in dev for better performance during development

# Documentation settings
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
